--- a/src/BirdOffice/UserBundle/Resources/less/class.less
+++ b/src/BirdOffice/UserBundle/Resources/less/class.less
@@ -12,6 +12,8 @@
 @shadow: -2px 7px 13px -3px #ccc;
 @blue-bird: #7EBDCE;
 @pink-flat: #f28073;
+@light-green: #d6e9c6;
+@dark-green: #58aa89;
 /* Transitions */
 @transition : 0.7s;
 @margin: 15px;
@@ -74,6 +76,9 @@
   }
   #modal-body > ul {
     padding-left: 15px;
+  }
+  .alert-success {
+    width: 100%;
   }
 }
 
