--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -191,3 +191,7 @@ a { color: @blue-violet; font-weight: bold;
     }
 }
 .main-title { background: @blue-bird; border-radius: 5px 5px 0 0; color: @white; font-weight: bold; max-width: 410px; padding: 15px}
+
+.alert-success { border-color: @light-green; color: @dark-green; font-weight: bold; margin: 0 auto; text-align: center; width: 50%; background: @white}
+
+.check { display: block; margin: 60px auto 0; width: 12%}
