--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -195,3 +195,10 @@ a { color: @blue-violet; font-weight: bold;
 .alert-success { border-color: @light-green; color: @dark-green; font-weight: bold; margin: 0 auto; text-align: center; width: 50%; background: @white}
 
 .check { display: block; margin: 60px auto 0; width: 12%}
+
+.suscribe {
+    background: @white!important; color: @blue-bird!important; outline: solid 1px @blue-bird; text-decoration: none;
+    &:hover {
+        border: none!important; background: @blue-bird!important; color: @white!important; transition-duration: @transition
+    }
+}
