--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -37,7 +37,7 @@
                         <input type="submit" id="_submit" name="_submit" value="Connexion" class="btn btn-lg btn-primary btn-block space" />
                          <h2 class="form-signin-heading center margin">Vous n'êtes pas inscrit ?</h2>
                          <a href="{{ path('fos_user_registration_register') }}" class="hover">
-                             <input type="submit" id="_submit" name="_submit" value="M'inscrire" class="btn btn-primary center space block" />
+                             <input type="submit" id="_submit" name="_submit" value="M'inscrire" class="btn btn-primary center space block suscribe" />
                          </a>
                     </form>
                 </div>
