--- a/src/BirdOffice/UserBundle/Resources/views/Mail/emailing-recap.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Mail/emailing-recap.html.twig
@@ -101,13 +101,13 @@
                         <tr>
                             <td valign="top" width="75"></td>
                             <td valign="middle" align="center" width="200" height="30" bgcolor="#1abc9c">
-                                <a href="{{ path('validateDay', {dayId:day.id, 'validation':1 }) }}" target="_blank" style="text-decoration: none;display: block">
+                                <a href="{{ app.request.getSchemeAndHttpHost() }}{{ path('validateDay', {dayId:day.id, 'validation':1, 'userId':day.user.id }) }}" target="_blank" style="text-decoration: none;display: block">
                                     <font face="Arial" size="1" color="#ffffff" style="font-size:12px;"><strong>Valider la demande</strong></font>
                                 </a>
                             </td>
                             <td valign="top" width="50"></td>
                             <td valign="middle" align="center" width="200" height="30" bgcolor="#e74c3c">
-                                <a href="{{ path('validateDay', {dayId:day.id, 'validation':0 }) }}" target="_blank" style="text-decoration: none;display: block">
+                                <a href="{{ app.request.getSchemeAndHttpHost() }}{{ path('validateDay', {dayId:day.id, 'validation':0, 'userId':day.user.id }) }}" target="_blank" style="text-decoration: none;display: block">
                                     <font face="Arial" size="1" color="#ffffff" style="font-size:12px;"><strong>Refuser la demande</strong></font>
                                 </a>
                             </td>
