--- a/src/BirdOffice/UserBundle/Resources/views/Mail/emailing-recap.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Mail/emailing-recap.html.twig
@@ -84,7 +84,7 @@
                             </td>
                             <td valign="middle" width="120" height="35" align="center" style="border-bottom: 1px solid #cccccc; border-right:
                             solid 1px #cccccc;">
-                                <font face="Arial" size="1" color="#626262" style="font-size:12px;"><strong>{{ day.absenceType }}</strong></font>
+                                <font face="Arial" size="1" color="#626262" style="font-size:12px;"><strong>{{ day.absenceType.name }}</strong></font>
                             </td>
                             <td valign="middle" width="120" height="35" align="center" style="border-bottom: 1px solid #cccccc;border-right:
                             solid 1px #cccccc;">
@@ -101,13 +101,13 @@
                         <tr>
                             <td valign="top" width="75"></td>
                             <td valign="middle" align="center" width="200" height="30" bgcolor="#1abc9c">
-                                <a href="{{ app.request.getSchemeAndHttpHost() }}{{ path('validateDay', {dayId:day.id, 'validation':1, 'userId':day.user.id }) }}" target="_blank" style="text-decoration: none;display: block">
+                                <a href="{{ app.request.getSchemeAndHttpHost() }}{{ path('validateDay', {dayId:day.id, 'status':2, 'userId':day.user.id }) }}" target="_blank" style="text-decoration: none;display: block">
                                     <font face="Arial" size="1" color="#ffffff" style="font-size:12px;"><strong>Valider la demande</strong></font>
                                 </a>
                             </td>
                             <td valign="top" width="50"></td>
                             <td valign="middle" align="center" width="200" height="30" bgcolor="#e74c3c">
-                                <a href="{{ app.request.getSchemeAndHttpHost() }}{{ path('validateDay', {dayId:day.id, 'validation':0, 'userId':day.user.id }) }}" target="_blank" style="text-decoration: none;display: block">
+                                <a href="{{ app.request.getSchemeAndHttpHost() }}{{ path('validateDay', {dayId:day.id, 'status':1, 'userId':day.user.id }) }}" target="_blank" style="text-decoration: none;display: block">
                                     <font face="Arial" size="1" color="#ffffff" style="font-size:12px;"><strong>Refuser la demande</strong></font>
                                 </a>
                             </td>
