--- a/src/BirdOffice/UserBundle/Resources/views/Mail/emailing-reponse.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Mail/emailing-reponse.html.twig
@@ -88,7 +88,7 @@
                             </td>
                             <td valign="middle" width="120" height="35" align="center" style="border-bottom: 1px solid #cccccc; border-right:
                             solid 1px #cccccc;">
-                                <font face="Arial" size="1" color="#626262" style="font-size:12px;"><strong>{{ day.absenceType }}</strong></font>
+                                <font face="Arial" size="1" color="#626262" style="font-size:12px;"><strong>{{ day.absenceType.name }}</strong></font>
                             </td>
                             <td valign="middle" width="120" height="35" align="center" style="border-bottom: 1px solid #cccccc;border-right:
                             solid 1px #cccccc;">
