--- a/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
@@ -10,13 +10,9 @@
                     <div class="left">
                         <select class="form-control month" name="month" id="select-month" title="Mois">
                             <option value="0">Choix du mois</option>
-                            {% set start_date = '01-01-2016' %}
-                            {% set end_date = '31-12-2016' %}
-
-                            {% for x in range(start_date|date("m"), end_date|date("m") ) %}
-                                <option value="02">{{ x|date("m") }}</option>
+                            {% for j in range(1, 12) %}
+                                <option value="{% if j < 10 %}0{% endif %}{{ j }}">{{ date('2016-' ~ j ~ '-01') |date('M') }} 2016</option>
                             {% endfor %}
-
                         </select>
                     </div>
                     <button type="button" class="btn btn-default margin15 right" data-toggle="modal"  data-target="#myModal2">Ajouter un jour</button>
