Intégration des 3 états de validation

--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -202,3 +202,13 @@ a { color: @blue-violet; font-weight: bold;
         border: none!important; background: @blue-bird!important; color: @white!important; transition-duration: @transition
     }
 }
+
+.choice-yes, .choice-no { float: left;font-weight: bold!important; line-height: 20px }
+
+.waiting { font-style: italic; font-weight: 600}
+
+.choice-yes {color: @flatgreen}
+
+.choice-no {color: @pink-flat}
+
+.choice-no.center, .choice-yes.center {float: none}
