--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -212,3 +212,5 @@ a { color: @blue-violet; font-weight: bold;
 .choice-no {color: @pink-flat}
 
 .choice-no.center, .choice-yes.center {float: none}
+
+.datepick label { font-weight: bold}
