--- a/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
@@ -33,7 +33,7 @@
                     <h4 class="modal-title" id="myModalLabel">Ajout de jour</h4>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form class="datepick">
                         <div class="form-group">
                         <label for="date-picker-3" class="control-label">Date début</label>
                             <div class="controls">
