--- a/src/BirdOffice/UserBundle/Resources/views/Day/edit.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Day/edit.html.twig
@@ -1,4 +1,4 @@
-<form {{ form_enctype(form) }} name="form_day_edit" method="POST" class="">
+<form {{ form_enctype(form) }} name="form_day_edit" method="POST" class="datepick">
 
     {{ form_row(form.absenceType) }}
     {{ form_row(form.presenceType) }}
