filtre users par superAdmin

--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -10,7 +10,7 @@
         {{ form_row(form.firstname) }}
         {{ form_row(form.email) }}
         {{ form_row(form.plainPassword) }}
-        {{ form_row(form.managedBy) }}
+        {{ form_row(form.manager) }}
 
         <div>
             <input id="add-partner-ajax" type="submit" class="btn btn-primary right" value="Valider"/>
