Msg alerte popup

--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -214,3 +214,5 @@ a { color: @blue-violet; font-weight: bold;
 .choice-no.center, .choice-yes.center {float: none}
 
 .datepick label { font-weight: bold}
+
+.error-field {color: @pink-flat;display: block; font-style: italic; margin-bottom: 15px}
