--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -215,4 +215,4 @@ a { color: @blue-violet; font-weight: bold;
 
 .datepick label { font-weight: bold}
 
-.error-field {color: @pink-flat;display: block; font-style: italic; margin-bottom: 15px}
+.error-field, .error-field-2 {color: @pink-flat;display: none; font-style: italic; margin-bottom: 15px}
