--- a/src/BirdOffice/UserBundle/Resources/views/presence/presence.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/presence/presence.html.twig
@@ -26,15 +26,15 @@
             <form>
                 {% if day.isValidated == 0 %}
                     <p class="waiting">En attente</p>
-                    <div class="checkbox">
+                    <div class="checkbox" data-day="{{ day.id }}">
                         <label class="choice-yes">
-                            <input class="validate" {% if day.isValidated == 2 %}checked{% endif %} type="checkbox" value="">
                                 Valider
                         </label>
+                        <input class="validate-status"  {% if day.isValidated == 2 %}checked{% endif %} type="checkbox" value="2">
                         <label class="choice-no">
-                            <input class="validate" {% if day.isValidated == 1 %}checked{% endif %} type="checkbox" value="">
                                 Refuser
                         </label>
+                        <input class="validate-status" data-day="{{ day.id }}" {% if day.isValidated == 1 %}checked{% endif %} type="checkbox" value="1">
                     </div>
                     {% elseif day.isValidated == 1%}
                         <label class="choice-no center">Refusé</label>
