--- a/src/BirdOffice/UserBundle/Resources/less/styles.less
+++ b/src/BirdOffice/UserBundle/Resources/less/styles.less
@@ -203,15 +203,13 @@ a { color: @blue-violet; font-weight: bold;
     }
 }
 
-.choice-yes, .choice-no { float: left;font-weight: bold!important; line-height: 20px }
+.choice-yes, .choice-no {font-weight: bold!important; line-height: 20px }
 
 .waiting { font-style: italic; font-weight: 600}
 
 .choice-yes {color: @flatgreen}
 
 .choice-no {color: @pink-flat}
-
-.choice-no.center, .choice-yes.center {float: none}
 
 .datepick label { font-weight: bold}
 
