--- a/src/BirdOffice/UserBundle/Resources/views/presence/presence.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/presence/presence.html.twig
@@ -13,7 +13,7 @@
         <td class="text-center none-mobile">{{ day.startDate|date("d/m/Y") }}</td>
         <td class="text-center none-mobile">{{ day.hours }} heures</td>
         <td class="text-center none-mobile">Absence : {{ day.absenceType.name|default('') }}</td>
-        <td class="text-center none-mobile">{{ day.description|default('') }}</td>
+        <td class="text-center none-mobile"><i>{{ day.description|default('') }}</i></td>
         <td class="text-center">
             <button type="button" data-day="{{ day.id }}" class="btn btn-primary detail-day" data-toggle="modal" data-target="#myModal">
                 En savoir plus
