--- a/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
@@ -35,7 +35,7 @@
                 <div class="modal-body">
                     <form class="datepick">
                         <div class="form-group">
-                        <label for="date-picker-3" class="control-label">Date début</label>
+                            <label for="date-picker-3" class="control-label">Date début</label>
                             <div class="controls">
                                 <div class="input-group">
                                     <label for="date-picker-3" class="input-group-addon btn">
@@ -46,7 +46,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                        <label for="date-picker-3" class="control-label">Date fin</label>
+                            <label for="date-picker-3" class="control-label">Date fin</label>
                             <div class="controls">
                                 <div class="input-group">
                                     <label for="date-picker-4" class="input-group-addon btn">
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label>Nombre d'heures</label>
+                            <label for="form-hours">Nombre d'heures</label>
                             <select id="form-hours" class="form-control">
                                 <option selected> </option>
                                 <option>1</option>
