--- a/src/BirdOffice/UserBundle/Resources/views/presence/presence.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/presence/presence.html.twig
@@ -1,4 +1,4 @@
-<table class="table table-striped table-bordered text-center">
+<table class="table table-striped table-bordered text-center presence-container">
     <tr class="head-table">
         <th class="text-center none-mobile">Jour</th>
         <th class="text-center none-mobile">Durée</th>
