--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -101,7 +101,26 @@
                         </div><!-- /.modal-content -->
                     </div><!-- /.modal-dialog -->
                 </div><!-- /.modal -->
-            {% block body %}{% endblock %}
+
+                <div class="modal fade" id="modal2" tabindex="-1" role="dialog">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header alert">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title" id="myModalLabel">Détails de la demande</h4>
+                            </div>
+                            <div class="modal-body">
+                                Etes-vous sûr de vouloir supprimer ce collaborateur ?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" id="modal-delete" data-user="" data-dismiss="modal" class="delete-user btn btn-primary">Supprimer</button>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                {% block body %}{% endblock %}
             </div>
             <div class="col-md-2"></div>
         </div>
