--- a/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/collaborateur.html.twig
@@ -15,91 +15,14 @@
                             {% endfor %}
                         </select>
                     </div>
-                    <button type="button" class="btn btn-default margin15 right" data-toggle="modal"  data-target="#myModal2">Ajouter un jour</button>
+                    <button type="button" class="btn btn-default margin15 right edit-day" data-user="{{ user.id }}">Ajouter un jour</button>
                 </div>
             </div>
         </div>
         <div id="presences">
-
         </div>
-        <!-- ICI PRESENCES -->
-
-    <!-- Modal : ajouter un jour-->
-    <div class="modal fade" id="myModal2" data-user="{{ user.id }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Ajout de jour</h4>
-                </div>
-                <div class="modal-body">
-                    <form class="datepick">
-                        <div class="form-group">
-                            <label for="date-picker-3" class="control-label">Date début</label>
-                            <div class="controls">
-                                <div class="input-group">
-                                    <label for="date-picker-3" class="input-group-addon btn">
-                                        <i class="fa fa-calendar"></i>
-                                    </label>
-                                    <input id="date-picker-3" type="text" class="date-picker form-control" />
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="date-picker-3" class="control-label">Date fin</label>
-                            <div class="controls">
-                                <div class="input-group">
-                                    <label for="date-picker-4" class="input-group-addon btn">
-                                        <i class="fa fa-calendar"></i>
-                                    </label>
-                                    <input id="date-picker-4" type="text" class="date-picker form-control" />
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="form-hours">Nombre d'heures</label>
-                            <select id="form-hours" class="form-control">
-                                <option selected> </option>
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                                <option>6</option>
-                                <option>7</option>
-                                <option>8</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label>Type d'absence</label>
-                            <select id="absence-type" class="form-control">
-                                <option selected> </option>
-                                {%  for absence in absences %}
-                                    <option value="{{ absence.id }}">{{ absence.name }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label>Type de présence</label>
-                            <select id="presence-type" class="form-control">
-                                <option selected> </option>
-                                {% for presence in presences %}
-                                    <option value="{{ presence.id }}">{{ presence.name }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                        <textarea id="day-description" class="form-control" rows="3" placeholder="Commentaire"></textarea>
-                        <button  type="submit" class="btn btn-default right space form-submit">Valider</button>
-                        <div class="clear"></div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
 <script>
-
     $( document ).ready(function() {
-
         //Affiche la liste des absences/présences
         $(function () {
             var month = $("#select-month").val();
@@ -112,7 +35,6 @@
             ajaxMonthCall(user, month);
         });
     });
-
 </script>
 
 {% endblock %}
