--- a/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
+++ b/src/BirdOffice/UserBundle/Resources/views/Default/list.html.twig
@@ -14,7 +14,7 @@
                 <td class="text-center">{{ user.email }}</td>
                 <td class="actions text-center">
                     <span data-user="{{ user.id }}" class="fa fa-trash-o icon-size trash-user"></span>
-                    <i data-user="{{ user.id }}" class="fa fa-edit icon-size edit-user"></i>
+                    <i data-user="{{ user.id }}" class="fa fa-edit icon-size edit-add-user"></i>
                     <span class="text-default none-mobile">
                         <i class="fa fa-search icon-size bouton">
                             <div class="info-bulle">
@@ -30,25 +30,3 @@
             </tr>
         {% endfor %}
     </table>
-
-{#
-    <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header alert">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Détails de la demande</h4>
-                </div>
-                <div class="modal-body">
-                    Etes-vous sûr de vouloir supprimer ce collaborateur ?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Supprimer</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-#}
